# practice

./: README.md  prac.py  pyproject.toml
src/practice/: __init__.py
